# phoenix-refired-v2

./: IMPLEMENTATION_PROGRESS.md  PHOENIX_V15_FINAL_REPORT.md
brain/: .gitignore  BENCH.md  PROGRESS.md  pyproject.toml
brain/src/brain/: __init__.py  dreams.py  durability.py  learning.py  memory_candidates.py  recall.py  review_cli.py  review_gate.py  skills.py  substrate.py
brain/src/brain/distiller/: __init__.py  gemma_distiller.py
brain/tests/: test_agent_subsystems.py  test_attack_wall.py  test_correction.py  test_distiller_quality.py  test_dreams.py  test_drills.py  test_durability.py  test_full_integration.py  test_hybrid_recall.py  test_identity_shaping.py  test_isolation.py  test_knowledge_graph.py  test_learning.py  test_memory_candidates.py  test_memory_scope.py  test_migration_v9.py  test_persona_proposals.py  test_recall.py  test_reinforcement.py  test_review_gate.py  test_search.py  test_skills.py  test_substrate.py  test_wyrm_link2.py  test_wyrm_link3.py  test_wyrm_link4.py  test_wyrm_pass1.py
harness/: HARNessed_AND_FROM_THE_TRUTH.md  Harness_Understanding.json  IMPLEMENTATION_PLAN.json  IMPLEMENTATION_PLAN_CORRECTED.json  IMPLEMENTATION_PLAN_FINAL.json  IMPLEMENTATION_PLAN_UPDATED.json  pyproject.toml  test_import.py  test_live_brain.py
harness/src/harness/: __init__.py  agent.py  config.py  dream_runner.py  drift.py  glove.py  interrupt.py  question_wal.py  stones.py  sub_agent.py  tools.py
harness/tests/: test_direct_live_drift.py  test_drift_simplified.py  test_phase0.py  test_phase1_2_context.py  test_phase1_3_inference.py  test_phase1_wal.py  test_phase2_1_tools_and_gates.py  test_phase2_2_fabrication_detection.py  test_phase3_drift_control.py  test_phase4_dreams.py  test_phase5_sub_agents.py  test_phase6_interrupt.py  test_phase7_acceptance.py  test_phase8_parity.py  test_phase9_adversarial.py
