[project]
name = "brain"
version = "0.0.1"
description = "The Brain — one database file: memory, identity, learning (/mnt/hdd/truth/brain.spec.md)"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
brain-review = "brain.review_cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.16",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain"]

[tool.mypy]
strict = true
files = ["src", "tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
