[project]
name = "harness"
version = "0.1.0"
description = "Phoenix Brain Harness"
requires-python = ">=3.12"
dependencies = [
    "brain @ file:///mnt/hdd/phoenix-refire/brain",
    "anyio>=4.0.0",
    "click>=8.1.7",
    "httpx>=0.26.0",
    "requests>=2.32.0",
    "mypy>=1.8.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0.1",
    "ruff>=0.3.0",
    "sqlalchemy>=2.0.0",
    "typing-extensions>=4.9.0",
]

[project.scripts]
harness-run = "harness.agent:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.16",
    "ruff>=0.11",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.mypy]
strict = true
files = ["src", "tests"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "C4", "DTZ", "A", "SIM", "UP"]
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"